--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" style="css/index.css"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css"/>
   <script data-main="scripts/main" src="scripts/require.js"></script>
 </head>
 <body>
