--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/index.css"/>
   <script data-main="scripts/main" src="scripts/require.js"></script>
 </head>
