--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/index.css"/>
-  <script data-main="scripts/main" src="scripts/require.js"></script>
 </head>
 <body>
   <canvas id="mainCanvas" width="640" height="480"></canvas>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
