--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" type="text/css" href="css/index.css"/>
 </head>
 <body>
-  <script src="dist/bundle.js"></script>
+  <script type="application/json" src="dist/bundle.js"></script>
 </body>
 </html>
